Clean up + better error handling